--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,6 @@
 <body>
   <noscript>Pease enable JavaScript support</noscript>
   <div id="root"></div>
-  <script src="bundle.js"></script>
+  <script src="/bundle.js"></script>
 </body>
 </html>
